# file-monitor

./: CHANGELOG.md  Cargo.toml  LICENSE  OPTIMIZATION_README.md  PERFORMANCE_GUIDE.md  README.md  config.toml  config.toml.backup  deny.toml  run_monitor.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: USAGE.md  ci.yml  release.yml
scripts/: performance_test.sh
src/: main.rs
tests/: integration_tests.rs
