[package]
name = "file_monitor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "一个高性能、跨平台的文件监控工具，支持实时监控目录中的新文件创建"
documentation = "https://github.com/USERNAME/file_monitor"
homepage = "https://github.com/USERNAME/file_monitor"
repository = "https://github.com/USERNAME/file_monitor"
license = "MIT"
keywords = ["file-monitor", "file-watcher", "monitoring", "async", "cross-platform"]
categories = ["filesystem", "command-line-utilities"]
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]

[[bin]]
name = "file_monitor"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
futures = "0.3"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.8"
filetime = "0.2"
assert_cmd = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0
